fix!: correct the measurement protocol, the ceilings and the envelope (#1)
* fix(workload): derive dataset_version from what the data is, not from bytes

It hashed workload.toml, the Avro schema and the DDL, and claimed to be
'derived from file content, so it cannot be forgotten'. It was wrong in both
directions: the generator's arithmetic lives in corpus.rs and was not hashed at
all, while correcting a comment in the DDL re-versioned the corpus and would
have split every published record from the tree.

Each input is now hashed at the grain its consumer can observe -- parsed TOML
values, normalised SQL, a marked region of corpus.rs. The .avsc keeps its bytes,
for a better reason than the old one: it is POSTed to the schema registry and
the id that comes back is written into bytes 1..5 of every message.

The gate also grew past two integer sums to cover sensor, region, name_upper,
unit, tags and batch_ts, so an arm that skips the array encode or the null-region
coalesce no longer passes.

* feat(harness): measure both ceilings, from inside the network

The 70% headroom rule was the whole defence of 'we are not measuring
ClickHouse', and nothing behind it was true. bench ceiling printed a stored
constant. That constant was measured at 840-byte messages and kept as the
denominator after events_per_batch took the message to 4056, asserting 1.24 GB/s
against the 256.7 MB/s the same pass sustained. There was no ClickHouse ceiling
at all.

Both passes now measure, per (insert format, tier), from inside the bench
network -- the side every arm is on. From outside, 85% of insert duration was
the server blocked reading our request body; it is now 1-2%, and the target
sits at 100-102% of its cap. A ceiling that cannot say what it measured, or was
taken at a materially different message size or envelope, is refused rather
than extrapolated.

* feat(harness): server-side cost, GC pauses and JVM heap

Four of six rows of the measurement table were specification rather than
descri